--- a/public/land.css
+++ b/public/land.css
@@ -161,3 +161,12 @@ body {
 
 
 
+#particles-js {
+    position: fixed; /* Fixed position to cover the entire viewport */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1; /* Place particles behind other elements */
+    background: linear-gradient(90deg, #020024 0%, #1b3c87 40%, #00b4db 100%); /* Fallback background */
+}
